Extend response of GET /api/auth/login
